[package]
name = "owns"
description = "A simple program for finding out the codeowners of a file"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^3.1", features = ["cargo"] }
glob = "^0.3"
