[package]
name = "cown"
version = "0.1.2"
authors = ["Ben Bader <ben@bendb.com>"]
license = "GPL-3.0-or-later"
description = "A simple program for finding out the codeowners of a file"
readme = "README.md"
homepage = "https://github.com/benjamin-bader/cown"
repository = "https://github.com/benjamin-bader/cown"
keywords = ["cli", "git", "codeowners"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^3.1", features = ["cargo"] }
glob = "^0.3"
